--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -104,6 +104,46 @@ journal:
    src: '/publications/J15.pdf',
    doi: 'https://doi.org/10.1016/j.jcp.2020.109245'}
 
+- {title: 'High-order hybridizable discontinuous Galerkin method for the gas kinetic equation.',
+   author: 'W Su, P Wang, Y Zhang',
+   journal: 'International Journal of Computational Fluid Dynamics',
+   volume: '33: 335-342',
+   year: '2019',
+   src: '/publications/J14.pdf',
+   doi: 'https://doi.org/10.1080/10618562.2019.1666110'}
+
+- {title: 'Heat and mass transfer of oscillatory lid-driven flow in the continuum, transition and free molecular flow regimes.',
+   author: 'P Wang, W Su, L Zhu, Y Zhang',
+   journal: 'International Journal of Heat and Mass Transfer',
+   volume: '131: 291-300',
+   year: '2019',
+   src: '/publications/J13.pdf',
+   doi: 'https://doi.org/10.1016/j.ijheatmasstransfer.2018.11.060'}
+
+- {title: 'Accurate and efficient computation of the Boltzmann equation for Couette flow: influence of intermolecular potentials on Knudsen layer function and viscous slip coefficient.',
+   author: 'W Su, P Wang, H Liu, L Wu',
+   journal: 'Journal of Computational Physics',
+   volume: '378: 573-590',
+   year: '2019',
+   src: '/publications/J12.pdf',
+   doi: 'https://doi.org/10.1016/j.jcp.2018.11.015'}
+
+- {title: 'A high-order hybridizable discontinuous Galerkin method with fast convergence to steady-state solutions of the gas kinetic equation.',
+   author: 'W Su, P Wang, Y Zhang, L Wu',
+   journal: 'Journal of Computa- tional Physics',
+   volume: '376: 973-991',
+   year: '2019',
+   src: '/publications/J11.pdf',
+   doi: 'https://doi.org/10.1016/j.jcp.2018.08.050'}
+
+- {title: 'Oscillatory rarefied gas flow inside a three dimensional rectan- gular cavity.',
+   author: 'P Wang, W Su, Y Zhang',
+   journal: 'Physics of Fluids',
+   volume: '30: 102002',
+   year: '2018',
+   src: '/publications/J10.pdf',
+   doi: 'https://doi.org/10.1063/1.5052253'}
+
 conference:
 - {title: '',
    author: '',
