--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -144,6 +144,46 @@ journal:
    src: '/publications/J10.pdf',
    doi: 'https://doi.org/10.1063/1.5052253'}
 
+- {title: 'State-specific modeling of vibrational relaxation and nitric oxide formation in shock-heated air.',
+   author: 'W Su, D Bruno, Y Babou',
+   journal: 'Journal of Thermophysics and Heat Transfer',
+   volume: '32: 337-352',
+   year: '2018',
+   src: '/publications/J9.pdf',
+   doi: 'https://doi.org/10.2514/1.T5271'}
+
+- {title: 'Rarefaction throttling effect: Influence of the bend in micro-channel gaseous flow.',
+   author: 'W Liu, G Tang, W Su, L Wu, Y Zhang',
+   journal: 'Physics of Fluids',
+   volume: '30: 082002',
+   year: '2018',
+   src: '/publications/J8.pdf',
+   doi: 'https://doi.org/10.1063/1.5037430'}
+
+- {title: 'Nonlinear oscillatory rarefied gas flow inside a rectangular cavity.',
+   author: 'P Wang, L Zhu, W Su, L Wu, Y Zhang',
+   journal: 'Physical Review E',
+   volume: '97: 043103',
+   year: '2018',
+   src: '/publications/J7.pdf',
+   doi: 'https://doi.org/10.1103/PhysRevE.97.043103'}
+
+- {title: 'Rarefaction cloaking: Influence of the fractal rough surface in gas slider bearings.',
+   author: 'W Su, H Liu, Y Zhang, L Wu',
+   journal: 'Physics of Fluids',
+   volume: '29: 102003',
+   year: '2017',
+   src: '/publications/J6.pdf',
+   doi: 'https://doi.org/10.1063/1.4999696'}
+
+- {title: 'Comparative study of the discrete velocity and lattice Boltzmann methods for rarefied gas flows through irregular channels.',
+   author: 'W Su, S Lindsay, H Liu, L Wu',
+   journal: 'Physical Review E',
+   volume: '96: 023309',
+   year: '2017',
+   src: '/publications/J5.pdf',
+   doi: 'https://doi.org/10.1103/PhysRevE.96.023309'}
+
 conference:
 - {title: '',
    author: '',
