--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -184,6 +184,38 @@ journal:
    src: '/publications/J5.pdf',
    doi: 'https://doi.org/10.1103/PhysRevE.96.023309'}
 
+- {title: 'Stable Runge-Kutta discontinuous Galerkin solver for hypersonic rarefied gaseous flows based on 2D Boltzmann kinetic equations.',
+   author: 'W Su, Z Tang, B He, G Cai',
+   journal: 'Applied Mathematics and Mechanics',
+   volume: '38: 343-362',
+   year: '2017',
+   src: '/publications/J4.pdf',
+   doi: 'https://doi.org/10.1007/s10483-017-2177-8'}
+
+- {title: 'A parallel Runge-Kutta discontinuous Galerkin solver for rarefied gas flows based on 2D Boltzmann kinetic equations.',
+   author: 'W Su, A Alexeenko, G Cai',
+   journal: 'Computers & Fluids',
+   volume: '109: 123-136',
+   year: '2015',
+   src: '/publications/J3.pdf',
+   doi: 'https://doi.org/10.1016/j.compfluid.2014.12.015'}
+
+- {title: 'Extension of the low diffusion particle method for near-continuum two-phase flow simulations.',
+   author: 'W Su, X He, G Cai',
+   journal: 'Chinese Journal of Aeronautics',
+   volume: '26: 37-46',
+   year: '2013',
+   src: '/publications/J2.pdf',
+   doi: 'https://doi.org/10.1016/j.cja.2012.12.010'}
+
+- {title: 'Theoretical development for DSMC local time stepping technique.',
+   author: 'G Cai, W Su, F Hou',
+   journal: 'Science China: Technological Sciences',
+   volume: '55: 2750-2756',
+   year: '2012',
+   src: '/publications/J1.pdf',
+   doi: 'https://doi.org/10.1007/s11431-012-4913-7'}
+
 conference:
 - {title: '',
    author: '',
