--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -23,6 +23,12 @@ featured:
    src: '/publications/J16.pdf',
    doi: 'https://doi.org/10.1007/s10915-020-01139-7'}
 
+preprint:
+- {title: '',
+   author: '',
+   year: '',
+   src: ''}
+
 journal:
 - {title: 'Temperature jump and Knudsen layer in rarefied molecular gas.',
    author: 'W Su, Q Li, Y Zhang, L Wu',
