--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -24,7 +24,7 @@ featured:
    doi: 'https://doi.org/10.1007/s10915-020-01139-7'}
 
 preprint:
-- {title: 'A fast-converging scheme for the phonon Boltzmann equa- tion with dual relaxation times.',
+- {title: 'A fast-converging scheme for the phonon Boltzmann equation with dual relaxation times.',
    author: 'J Liu, C Zhang, H Yuan, W Su, L Wu',
    year: '2022',
    src: '/publications/P1.pdf'}
