--- a/_data/people.yml
+++ b/_data/people.yml
@@ -4,7 +4,7 @@ PI:
    phone: '(000) 000-0000',
    email: 'hello@university.edu',
    office: 'Science Building 505',
-   image: 'assets/img/primary-investigator.jpg',
+   image: 'assets/img/wei-su.JPG',
    url: 'primary-investigator'}
 
 #Postdoc:
