--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 menu:
 - {name: 'Home', url: '/'}
-- {name: 'Team', url: '/people'}
+- {name: 'Team', url: '/team'}
 - {name: 'Publications', url: '/publications'}
 - {name: 'News', url: '/news'}
 - {name: 'Vacancies', url: '/vacancies'}
