--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -21,4 +21,4 @@ social:
 - {icon: 'linkedin', link: 'https://linkedin.com/in/lenpaul'}
 
 contacts:
-- {name: 'Dr Wei Su', title: 'Assitant Professor', department: 'Division of Emerging Interdisciplinary Areas', institution: 'The Hong Kong University of Science and Thechnology', institution_address: '1 Main Street, Canada', phone: '(000) 000-0000', email: 'hello@university.edu', office: 'Science Building 505', image: 'assets/img/contact.jpg'}
+- {name: 'Dr Wei Su', title: 'Assitant Professor', department: 'Division of Emerging Interdisciplinary Areas', institution: 'The Hong Kong University of Science and Thechnology', institution_address: '', phone: '(000) 000-0000', email: '', office: '', image: 'assets/img/contact.jpg'}
