--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -25,7 +25,7 @@ contacts:
    institution: 'The Hong Kong University of Science and Technology',
    institution_address: '',
    phone: '(000) 000-0000',
-   email: 'subuaa@gmail.com (will be updated when the University email is set up)',
+   email: 'suweibuaa@gmail.com (will be updated when the university email is set up)',
    office: '',
    image: 'assets/img/contact.jpg'
  }
