--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -23,8 +23,8 @@ contacts:
    title: 'Assistant Professor',
    department: 'Division of Emerging Interdisciplinary Areas',
    institution: 'The Hong Kong University of Science and Technology',
-   institution_address: '',
-   phone: '(000) 000-0000',
+   institution_address: 'Clear Water Bay, Kowloon, Hong Kong',
+   phone: '',
    email: 'suweibuaa@gmail.com (will be updated when the university email is set up)',
    office: '',
    image: 'assets/img/contact.jpg'
