--- a/_data/people.yml
+++ b/_data/people.yml
@@ -1,10 +1,14 @@
 PI:
 - {name: 'Wei Su',
-   title: 'Assistant Professor',
+   title: 'Dr',
+   position: 'Assistant Professor',
    degree: 'PhD in Aerospace Engineering',
    phone: '',
-   email: '',
+   email: 'suweibuaa@gmail.com (will be updated when the university email is set up)',
    office: '',
+   department: 'Division of Emerging Interdisciplinary Areas',
+   institution: 'The Hong Kong University of Science and Technology',
+   address: 'Clear Water Bay, Kowloon, Hong Kong',
    image: 'assets/img/wei-su.JPG',
    cv: '/people/cv-wei-su.pdf',
    googlescholar: 'https://scholar.google.com/citations?user=5ELg4LMAAAAJ&hl=en',
