--- a/_data/people.yml
+++ b/_data/people.yml
@@ -6,6 +6,7 @@ PI:
    phone: '',
    email: 'suweibuaa@gmail.com (will be updated when the university email is set up)',
    office: '',
+   building: '',
    department: 'Division of Emerging Interdisciplinary Areas',
    institution: 'The Hong Kong University of Science and Technology',
    address: 'Clear Water Bay, Kowloon, Hong Kong',
