--- a/_data/people.yml
+++ b/_data/people.yml
@@ -4,7 +4,7 @@ PI:
    position: 'Assistant Professor',
    degree: 'PhD in Aerospace Engineering',
    phone: '',
-   email: 'suweibuaa@gmail.com (will be updated when uni email is ready)',
+   email: 'suweibuaa@gmail.com (will be updated when the university email is set up)',
    office: '',
    building: '',
    department: 'Division of Emerging Interdisciplinary Areas',
