--- a/_data/people.yml
+++ b/_data/people.yml
@@ -4,12 +4,12 @@ PI:
    position: 'Assistant Professor',
    degree: 'PhD in Aerospace Engineering',
    phone: '',
-   email: 'suweibuaa@gmail.com (will be updated when the university email is set up)',
+   email: 'weisu@ust.hk',
    office: '',
    building: '',
    department: 'Division of Emerging Interdisciplinary Areas',
    institution: 'HKUST',
-   address: 'Clear Water Bay, Kowloon, Hong Kong',
+   address: 'Clear Water Bay, Hong Kong',
    image: 'assets/img/wei-su.JPG',
    cv: '/people/cv-wei-su.pdf',
    googlescholar: 'https://scholar.google.com/citations?user=5ELg4LMAAAAJ&hl=en',
