--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -23,9 +23,9 @@ contacts:
    title: 'Assistant Professor',
    department: 'Division of Emerging Interdisciplinary Areas',
    institution: 'The Hong Kong University of Science and Technology',
-   address: 'Clear Water Bay, Kowloon, Hong Kong',
+   address: 'Clear Water Bay, Hong Kong',
    phone: '',
-   email: 'suweibuaa@gmail.com (will be updated when the university email is set up)',
+   email: 'weisu@ust.hk',
    office: '',
    image: 'assets/img/contact.jpg'
  }
