--- a/_data/people.yml
+++ b/_data/people.yml
@@ -3,10 +3,10 @@ PI:
    title: 'Dr',
    position: 'Assistant Professor',
    degree: 'PhD in Aerospace Engineering',
-   phone: '',
+   phone: '(852) 3469 2415',
    email: 'weisu@ust.hk',
-   office: '',
-   building: '',
+   office: 'Room 4340',
+   building: 'Academica Building',
    department: 'Division of Emerging Interdisciplinary Areas',
    institution: 'HKUST',
    address: 'Clear Water Bay, Hong Kong',
