--- a/_data/people.yml
+++ b/_data/people.yml
@@ -5,8 +5,8 @@ PI:
    degree: 'PhD in Aerospace Engineering',
    phone: '(852) 3469 2415',
    email: 'weisu@ust.hk',
-   office: 'Room 4340',
-   building: 'Academica Building',
+   office: '4340',
+   building: 'Academic Building',
    department: 'Division of Emerging Interdisciplinary Areas',
    institution: 'HKUST',
    address: 'Clear Water Bay, Hong Kong',
