--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -24,10 +24,10 @@ featured:
    doi: 'https://doi.org/10.1007/s10915-020-01139-7'}
 
 preprint:
-- {title: '',
-   author: '',
-   year: '',
-   src: ''}
+- {title: 'Non-equilibrium flow of dense inhomogeneous fluids in nano-channels',
+   author: 'B Shan, L Ju, W Su, Z Guo, Y Zhang',
+   year: '2022',
+   src: '/publications/P1.pdf'}
 
 journal:
 - {title: 'A fast-converging scheme for the phonon Boltzmann equation with dual relaxation times.',
