--- a/_data/people.yml
+++ b/_data/people.yml
@@ -7,7 +7,7 @@ PI:
    email: 'weisu@ust.hk',
    office: '4340',
    building: 'Academic Building',
-   department: 'Division of Emerging Interdisciplinary Areas',
+   department: 'Division of Emerging Interdisciplinary Areas & Department of Mathematics',
    institution: 'HKUST',
    address: 'Clear Water Bay, Hong Kong',
    image: 'assets/img/wei-su.JPG',
