--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 url: "http://su-researchgroup.com" # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: "" # the subpath of your site, e.g. /blog
 title: "Wei SU Research Group" # the name of your site, e.g. ACME Corp.
-description: "@ EMIA | IPO | HKUST"
+description: "@ EMIA | MATH | HKUST"
 
 # Homepage limit posts
 number_of_posts: 5
