--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -24,6 +24,11 @@ featured:
    doi: 'https://doi.org/10.1007/s10915-020-01139-7'}
 
 preprint:
+- {title: 'Highly rarefied gas flows in rough channels of finite length',
+   author: 'Z Shi, Y Zhao, W Su, L Wu',
+   year: '2023',
+   src: '/publications/P2.pdf'}
+
 - {title: 'Non-equilibrium flow of dense inhomogeneous fluids in nano-channels',
    author: 'B Shan, L Ju, W Su, Z Guo, Y Zhang',
    year: '2022',
