--- a/_data/people.yml
+++ b/_data/people.yml
@@ -17,7 +17,10 @@ PI:
    linkdin: 'https://www.linkedin.com/in/wei-su-24373899'
    }
 
-#Postdoc:
+Postdoc:
+- {name: 'Wei Liu',
+   title: 'Dr'
+   }
 
 #PhD:
 
