--- a/_data/people.yml
+++ b/_data/people.yml
@@ -31,7 +31,7 @@ Postdoc:
 PhD:
 - {name: 'Dingtao Shen',
    program: 'IIP (09/2023 - )',
-   image: 'assets/img/dingtao-shen.jpg',
+   image: 'assets/img/dingtao-shen.jpeg',
    email: 'dingtao.shen@connect.ust.hk',
    office: '',
    master: 'M. S.: University of Wisconsin-Madison',
