--- a/_data/people.yml
+++ b/_data/people.yml
@@ -23,7 +23,7 @@ Postdoc:
    email: '',
    office: '4384',
    phd: 'PhD. E.: National University of Singapore',
-   master: 'M. E.: Xian Jaotong Univeristy',
+   master: 'M. E.: Xian Jiaotong Univeristy',
    bachelor: 'B. E.: China University of Petroleum (Qingtao)',
    topic: ''
    }
