--- a/_data/people.yml
+++ b/_data/people.yml
@@ -36,7 +36,7 @@ PhD:
    office: '',
    master: 'M. S.: University of Wisconsin-Madison',
    bachelor: 'B. S.: Zhejiang University',
-   topic: 'High-fidelity solution methods for Boltzmann tansport equation-based modelling of phonon heat conduction'
+   topic: 'High-fidelity solution methods for Boltzmann transport equation-based modelling of phonon heat conduction'
   }
 
 #Master:
