--- a/_data/people.yml
+++ b/_data/people.yml
@@ -16,17 +16,17 @@ PI:
    linkdin: 'https://www.linkedin.com/in/wei-su-24373899'
    }
 
-Postdoc:
-- {name: 'Wei Liu',
-   position: 'Postdoctoral Researcher',
-   image: 'assets/img/wei-liu.jpg',
-   email: 'weilemia@ust.hk',
-   office: '4384',
-   phd: 'PhD. E.: National University of Singapore',
-   master: 'M. E.: Xian Jiaotong Univeristy',
-   bachelor: 'B. E.: China University of Petroleum (Qingtao)',
-   topic: 'Multiscale modelling of nonequilibrium gas flows'
-   }
+#Postdoc:
+#- {name: '',
+#   position: '',
+#   image: '',
+#   email: '',
+#   office: '',
+#   phd: '',
+#   master: '',
+#   bachelor: '',
+#   topic: ''
+#   }
 
 PhD:
 - {name: 'Dingtao Shen',
